--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,14 @@
 :root {
     --glow: #00000050;
     --background: #ffffff;
-    --foreground: #171717;
+    --foreground: #000000;
 }
 
 @media (prefers-color-scheme: dark) {
     :root {
         --glow: #ffffff50;
-        --background: #0a0a0a;
-        --foreground: #ededed;
+        --background: #000000;
+        --foreground: #ffffff;
     }
 }
 
